--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -117,6 +117,106 @@
     @apply border-border outline-ring/50;
   }
   body {
-    @apply bg-background text-foreground;
+    @apply scroll-smooth bg-background text-foreground;
   }
+
+  h1,
+	.h1 {
+		@apply scroll-m-20 text-4xl font-extrabold tracking-tight;
+	}
+
+	h2,
+	.h2 {
+		@apply scroll-m-20 text-3xl font-semibold tracking-tight first:mt-0;
+	}
+
+	h3,
+	.h3 {
+		@apply scroll-m-20 text-2xl font-semibold tracking-tight;
+	}
+
+	h4,
+	.h4 {
+		@apply scroll-m-20 text-xl font-semibold tracking-tight;
+	}
+
+	h5,
+	.h5 {
+		@apply scroll-m-20 text-lg font-semibold tracking-tight;
+	}
+
+	h6,
+	.h6 {
+		@apply scroll-m-20 text-base font-semibold tracking-tight;
+	}
+
+	p {
+		@apply leading-7;
+	}
+
+	blockquote {
+		@apply mt-6 border-l-2 pl-6 italic;
+	}
+
+  th {
+    @apply bg-input/25 p-2 text-left font-bold dark:bg-input/25 [&[align=center]]:text-center [&[align=right]]:text-right;
+  }
+
+  tr {
+    @apply even:bg-card odd:bg-card/25;
+  }
+
+	/* table {
+		@apply w-full;
+	}
+
+	tr {
+		@apply m-0 border-t-0 p-0 even:bg-secondary/30 dark:even:bg-secondary;
+	}
+
+
+	td {
+		@apply overflow-hidden truncate border-0 p-2 text-left [&[align=center]]:text-center [&[align=right]]:text-right !important;
+	} */
+
+	ul {
+		@apply my-6 ml-6 list-disc [&>li]:mt-2;
+	}
+
+	code {
+		@apply relative rounded bg-muted px-[0.3rem] py-[0.2rem] font-mono text-sm font-semibold;
+	}
+
+	.lead {
+		@apply text-xl text-muted-foreground;
+	}
+
+	.large {
+		@apply text-lg font-semibold;
+	}
+
+	small,
+	.small {
+		@apply text-xs font-medium leading-none;
+	}
+
+	.muted {
+		@apply text-sm text-muted-foreground;
+	}
+
+  ::selection {
+		@apply bg-primary text-background;
+	}
+
+	::-webkit-scrollbar {
+		@apply absolute h-2 w-2;
+	}
+
+	::-webkit-scrollbar-track {
+		@apply bg-muted;
+	}
+
+	::-webkit-scrollbar-thumb {
+		@apply rounded-full bg-muted-foreground;
+	}
 }
