--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -3,7 +3,6 @@
 @import "tailwindcss";
 @import "tw-animate-css";
 
-
 @custom-variant dark (&:is(.dark *));
 
 :root {
@@ -155,8 +154,6 @@
   --shadow-2xl: var(--shadow-2xl);
 }
 
-
-
 @layer base {
   * {
     @apply border-border outline-ring/50;
@@ -228,7 +225,6 @@
 		@apply m-0 border-t-0 p-0 even:bg-secondary/30 dark:even:bg-secondary;
 	}
 
-
 	td {
 		@apply overflow-hidden truncate border-0 p-2 text-left [&[align=center]]:text-center [&[align=right]]:text-right !important;
 	} */
@@ -273,4 +269,9 @@
 	::-webkit-scrollbar-thumb {
 		@apply rounded-full bg-muted-foreground;
 	}
+}
+
+::view-transition-old(root), ::view-transition-new(root) {
+    animation: none;
+    mix-blend-mode: normal;
 }
